@@ -269,11 +269,6 @@ if USE_EMBEDDED_CRYPTO
 libmuleappcommon_a_SOURCES += extern/cryptopp/CryptoPP.cpp
 endif
 
-if NEED_RC
-gui_libs += amulerc.$(OBJEXT)
-gui_deps += amulerc.$(OBJEXT)
-endif
-
 # --------- Apps ---------
 
 amulegui_SOURCES = \
@@ -465,16 +460,64 @@ $(srcdir)/Scanner.cpp: Scanner.l Parser.cpp
 		echo "// Empty file generated by a flex version unable to create headers" > $(srcdir)/Scanner.h
 endif
 
+# Resources
 
 if NEED_RC
 
-amulerc.$(OBJEXT): $(srcdir)/../amule.rc
-	@thisdir=`pwd` ; \
-	cd $(srcdir)/.. ; \
-	rcfile=`basename "$<"` ; \
-	echo "$(RC) $(RCFLAGS) --define __WIN95__ --define __WIN32__ --define __GNUWIN32__ -O COFF -i \"$${rcfile}\" -o \"$@\"" ; \
-	$(RC) $(RCFLAGS) --define __WIN95__ --define __WIN32__ --define __GNUWIN32__ -O COFF -i "$${rcfile}" -o "$@" ; \
-	cd $${thisdir} ; \
-	mv "$(srcdir)/../$@" "$@"
+SUFFIXES = .rc
+
+.rc.$(OBJEXT):
+	$(RC) $(RCFLAGS) -I$(top_srcdir) -D__WIN95__ -D__WIN32__ -D__GNUWIN32__ -O COFF -i "$<" -o "$@"
+
+nodist_amuled_SOURCES = amuled-version.rc
+nodist_amulecmd_SOURCES = amulecmd-version.rc
+nodist_ed2k_SOURCES = ed2k-version.rc
+amule_LDADD += amulerc.o
+amulegui_LDADD += amuleguirc.o
+
+amulerc.$(OBJEXT): $(srcdir)/../amule.rc amule-version.rc
+	cat $^ | \
+	( \
+		abs_builddir=`pwd` ; \
+		abs_top_srcdir=`cd $(top_srcdir) ; pwd` ; \
+		cd $(<D) ; \
+		$(RC) $(RCFLAGS) -I$${abs_top_srcdir} -D__WIN95__ -D__WIN32__ -D__GNUWIN32__ -O COFF -o "$${abs_builddir}/$@" ; \
+	)
+
+amuleguirc.$(OBJEXT): $(srcdir)/../amule.rc amulegui-version.rc
+	cat $^ | \
+	( \
+		abs_builddir=`pwd` ; \
+		abs_top_srcdir=`cd $(top_srcdir) ; pwd` ; \
+		cd $(<D) ; \
+		$(RC) $(RCFLAGS) -I$${abs_top_srcdir} -D__WIN95__ -D__WIN32__ -D__GNUWIN32__ -O COFF -o "$${abs_builddir}/$@" ; \
+	)
+
+amule-version.rc: $(top_builddir)/version.rc
+	@sed -e 's/VER_FILEDESCRIPTION_STR/"All-Platform P2P Client Based on eMule"/' \
+	     -e 's/VER_INTERNALNAME_STR/"amule"/' \
+	     -e 's/VER_ORIGINALFILENAME_STR/"amule$(EXEEXT)"/' "$<" > "$@"
+
+amuled-version.rc: $(top_builddir)/version.rc
+	@sed -e 's/VER_FILEDESCRIPTION_STR/"aMule Daemon"/' \
+	     -e 's/VER_INTERNALNAME_STR/"amuled"/' \
+	     -e 's/VER_ORIGINALFILENAME_STR/"amuled$(EXEEXT)"/' "$<" > "$@"
+
+amulecmd-version.rc: $(top_builddir)/version.rc
+	@sed -e 's/VER_FILEDESCRIPTION_STR/"aMule Text Client"/' \
+	     -e 's/VER_INTERNALNAME_STR/"amulecmd"/' \
+	     -e 's/VER_ORIGINALFILENAME_STR/"amulecmd$(EXEEXT)"/' "$<" > "$@"
+
+amulegui-version.rc: $(top_builddir)/version.rc
+	@sed -e 's/VER_FILEDESCRIPTION_STR/"aMule Remote GUI (Experimental)"/' \
+	     -e 's/VER_INTERNALNAME_STR/"amulegui"/' \
+	     -e 's/VER_ORIGINALFILENAME_STR/"amulegui$(EXEEXT)"/' "$<" > "$@"
+
+ed2k-version.rc: $(top_builddir)/version.rc
+	@sed -e 's/VER_FILEDESCRIPTION_STR/"ED2K Links Handler"/' \
+	     -e 's/VER_INTERNALNAME_STR/"ed2k"/' \
+	     -e 's/VER_ORIGINALFILENAME_STR/"ed2k$(EXEEXT)"/' "$<" > "$@"
+
+CLEANFILES = *-version.rc
 
 endif
