@@ -1,5 +1,5 @@
 bin_PROGRAMS = wxcas
-     
+
 wxcas_SOURCES = onlinesig.cpp \
 		linuxmon.cpp \
 		wxcas.cpp \
@@ -22,17 +22,30 @@ wxcas_CFLAGS = $(WX_CFLAGS)
 wxcas_CXXFLAGS = $(WX_CXXFLAGS)
 wxcas_LDADD = $(WX_LIBS)
 
+# Resources
+
 if NEED_RC
+
+SUFFIXES = .rc
+
 wxcas_LDADD += wxcasrc.$(OBJEXT)
 
-wxcasrc.$(OBJEXT): $(srcdir)/../wxcas.rc
-	@thisdir=`pwd` ; \
-	cd $(srcdir)/.. ; \
-	rcfile=`basename "$<"` ; \
-	echo "$(RC) $(RCFLAGS) --define __WIN95__ --define __WIN32__ --define __GNUWIN32__ -O COFF -i \"$${rcfile}\" -o \"$@\"" ; \
-	$(RC) $(RCFLAGS) --define __WIN95__ --define __WIN32__ --define __GNUWIN32__ -O COFF -i "$${rcfile}" -o "$@" ; \
-	cd $${thisdir} ; \
-	mv "$(srcdir)/../$@" "$@"
+wxcasrc.$(OBJEXT): $(srcdir)/../wxcas.rc wxcas-version.rc
+	cat $^ | \
+	( \
+		abs_builddir=`pwd` ; \
+		abs_top_srcdir=`cd $(top_srcdir) ; pwd` ; \
+		cd $(<D) ; \
+		$(RC) $(RCFLAGS) -I$${abs_top_srcdir} -D__WIN95__ -D__WIN32__ -D__GNUWIN32__ -O COFF -o "$${abs_builddir}/$@" ; \
+	)
+
+wxcas-version.rc: $(top_builddir)/version.rc
+	@sed -e 's/VER_FILEDESCRIPTION_STR/"Graphical aMule Statistics"/' \
+	     -e 's/VER_INTERNALNAME_STR/"wxcas"/' \
+	     -e 's/VER_ORIGINALFILENAME_STR/"wxcas$(EXEEXT)"/' "$<" > "$@"
+
+CLEANFILES = *-version.rc
+
 endif
 
 MAINTAINERCLEANFILES = Makefile.in
