@@ -1,0 +1,49 @@
+#include <winver.h>
+#include "src/include/common/ClientVersion.h"
+
+#ifdef __PRERELEASE__
+#define VER_PRERELEASE	VS_FF_PRERELEASE
+#undef VER_RELEASE
+#define	VER_RELEASE	0
+#define VER_PRODUCTVERSION_STR	"@PACKAGE_VERSION@ @CVSDATE@"
+#else
+#define VER_PRERELEASE	0
+#ifndef VER_RELEASE
+#define VER_RELEASE	1
+#endif
+#define	VER_PRODUCTVERSION_STR	"@PACKAGE_VERSION@"
+#endif
+
+#ifdef __DEBUG__
+#define VER_DEBUG	VS_FF_DEBUG
+#else
+#define VER_DEBUG	0
+#endif
+
+VS_VERSION_INFO VERSIONINFO
+	FILEVERSION	VERSION_MJR, VERSION_MIN, VERSION_UPDATE, VER_RELEASE
+	PRODUCTVERSION	VERSION_MJR, VERSION_MIN, VERSION_UPDATE, VER_RELEASE
+	FILEFLAGSMASK	VS_FFI_FILEFLAGSMASK
+	FILEFLAGS	VER_DEBUG | VER_PRERELEASE
+	FILEOS		VOS__WINDOWS32
+	FILETYPE	VFT_APP
+	FILESUBTYPE	0x0L
+BEGIN
+	BLOCK "StringFileInfo"
+	BEGIN
+		BLOCK "040904b0"
+		BEGIN
+			VALUE	"Comments",		"http://www.amule.org/"
+			VALUE	"FileDescription",	VER_FILEDESCRIPTION_STR
+			VALUE	"FileVersion",		VER_PRODUCTVERSION_STR
+			VALUE	"InternalName",		VER_INTERNALNAME_STR
+			VALUE	"OriginalFilename",	VER_ORIGINALFILENAME_STR
+			VALUE	"ProductName",		"aMule"
+			VALUE	"ProductVersion",	VER_PRODUCTVERSION_STR
+		END
+	END
+	BLOCK "VarFileInfo"
+	BEGIN
+		VALUE	"Translation", 0x0409, 1200
+	END
+END
